# domain/routes/auth.js
@@ -1,6 +1,6 @@
 // D:\WORK\kursTimeBunBackStage\routes/auth.js
 import express from 'express';
-import { registerUser, loginUser } from '../controllers/authController.js';
+import {registerUser, loginUser, getUpdatedUser} from '../controllers/authController.js';
 
 const router = express.Router();
 
@@ -9,5 +9,6 @@ router.post('/register', registerUser);
 
 // Авторизация пользователя
 router.post('/login', loginUser);
+router.post('/check', getUpdatedUser);
 
 export default router;
